--- a/style.css
+++ b/style.css
@@ -329,6 +329,7 @@ section .forgetForm {
     margin-left: 4rem;
     display: flex;
     align-items: center;
+    text-align: center;
     justify-content: center;
     transform: translateX(-50%);
     z-index: 1;
@@ -432,7 +433,7 @@ section .forgetForm form .Confirmsenha {
 }
 
 section .forgetForm form .Confirmsenha input{
-    width: 100%;
+    width: 80%;
     padding: 0.8rem;
     padding-left: 2rem;
     background: transparent;
@@ -539,7 +540,7 @@ section .left .Forgetpassword form .emailPassword label {
 
 section .left .Forgetpassword form .emailPassword input {
     padding: 1rem;
-    width: 100%;
+    width: 80%;
     color: white;
     border-radius: 4px;
     border:.1rem solid var(--text-title);
@@ -602,6 +603,27 @@ section .left .Forgetpassword form .emailPassword input {
 }
 
 @media(max-width: 671px){
+
+
+section .forgetForm {
+    width: 87%;
+    height: 82vh;
+    margin-left: 2.1rem;
+}
+
+section .left .Forgetpassword{
+      width: 87%;
+    height: 70vh;
+    margin-left: 2.1rem;
+   
+}
+
+    section .left .form {
+        width: 87%;
+        height: 70vh;
+        margin-left: 2.1rem;
+    }
+
     section {
         grid-template-columns: 100%;
     }
