--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ section form .title p {
 section .form form .inputsenha{
     flex-direction: column;
     width: 100%;
-    height: 3.5vh;
+    height: 6.6vh;
     position: relative;
     border: 1px solid var(--text-title);
     border-radius: 4px;
@@ -574,6 +574,15 @@ section .left .Forgetpassword form .emailPassword input {
         grid-template-columns: 60% 40%;
     }
 
+    section .form form .inputsenha{
+        flex-direction: column;
+        width: 100%;
+        height: 3.5vh;
+        position: relative;
+        border: 1px solid var(--text-title);
+        border-radius: 4px;
+    }
+
     section .form form .inputsenha .eye {
         position: absolute;
         top: 12px;
@@ -600,6 +609,15 @@ section .left .Forgetpassword form .emailPassword input {
         grid-area: "left left" "right right";
     }
 
+    section .form form .inputsenha{
+        flex-direction: column;
+        width: 100%;
+        height: 3.5vh;
+        position: relative;
+        border: 1px solid var(--text-title);
+        border-radius: 4px;
+    }
+
     section .left {
         grid-area: 'left';
     }
@@ -614,6 +632,16 @@ section .left .Forgetpassword form .emailPassword input {
     section .form form .inputemail img{
         top: 11px;
     }
+
+
+section .form form .inputsenha{
+    flex-direction: column;
+    width: 100%;
+    height: 3.5vh;
+    position: relative;
+    border: 1px solid var(--text-title);
+    border-radius: 4px;
+}
 
 
 section .forgetForm {
@@ -835,6 +863,51 @@ section .left .Forgetpassword form .emailPassword input{
     section .forgetForm form .Confirmsenha img:nth-child(3) {
         top: 10px;
         left: 230px;
+        position: absolute;
+    }
+}
+
+@media(max-width: 307px){
+    section .forgetForm form .senhaCreate > img:nth-child(4) {
+        position: absolute;
+        top: 10px;
+        left: 220px;
+    }
+
+     
+    section .forgetForm form .Confirmsenha img:nth-child(3) {
+        top: 10px;
+        left: 220px;
+        position: absolute;
+    }
+}
+
+@media(max-width: 298px){
+    section .forgetForm form .senhaCreate > img:nth-child(4) {
+        position: absolute;
+        top: 10px;
+        left: 210px;
+    }
+
+     
+    section .forgetForm form .Confirmsenha img:nth-child(3) {
+        top: 10px;
+        left: 210px;
+        position: absolute;
+    }
+}
+
+@media(max-width: 288px){
+    section .forgetForm form .senhaCreate > img:nth-child(4) {
+        position: absolute;
+        top: 10px;
+        left: 200px;
+    }
+
+     
+    section .forgetForm form .Confirmsenha img:nth-child(3) {
+        top: 10px;
+        left: 200px;
         position: absolute;
     }
 }
