--- a/style.css
+++ b/style.css
@@ -577,7 +577,7 @@ section .left .Forgetpassword form .emailPassword input {
     section .form form .inputsenha{
         flex-direction: column;
         width: 100%;
-        height: 7vh;
+        height: 3.5vh;
         position: relative;
         border: 1px solid var(--text-title);
         border-radius: 4px;
@@ -755,6 +755,17 @@ section .left .Forgetpassword form .emailPassword input{
         left: 290px;
         position: absolute;
     }
+
+
+
+section .form form .inputsenha{
+    flex-direction: column;
+    width: 100%;
+    height: 7vh;
+    position: relative;
+    border: 1px solid var(--text-title);
+    border-radius: 4px;
+}
 }
 
 
