--- a/style.css
+++ b/style.css
@@ -1847,13 +1847,27 @@ section .form form .inputsenha{
     section .forgetForm form .senhaCreate > img:nth-child(4) {
         position: absolute;
         top: 10px;
-        left: 180px;
+        left: 200px;
     }
 
      
     section .forgetForm form .Confirmsenha img:nth-child(3) {
         top: 10px;
-        left: 180px;
+        left: 200px;
         position: absolute;
     }
-}
+
+    section .form form .check label {
+        font-family: var(--font-Roboto);
+        font-size: 0.7rem;
+    }
+
+    section .form form .inputsenha{
+        flex-direction: column;
+        width: 100%;
+        height: 3.5vh;
+        position: relative;
+        border: 1px solid var(--text-title);
+        border-radius: 4px;
+    }
+} 
