--- a/style.css
+++ b/style.css
@@ -761,7 +761,7 @@ section .left .Forgetpassword form .emailPassword input{
 section .form form .inputsenha{
     flex-direction: column;
     width: 100%;
-    height: 7vh;
+    height: 3.5vh;
     position: relative;
     border: 1px solid var(--text-title);
     border-radius: 4px;
@@ -1759,7 +1759,7 @@ section .form form .inputsenha{
     section .form form .inputsenha{
         flex-direction: column;
         width: 100%;
-        height: 5vh;
+        height: 3.5vh;
         position: relative;
         border: 1px solid var(--text-title);
         border-radius: 4px;
@@ -1794,6 +1794,16 @@ section .form form .inputsenha{
         left: 200px;
         position: absolute;
     }
+
+
+    section .form form .inputsenha{
+    flex-direction: column;
+    width: 100%;
+    height: 3.5vh;
+    position: relative;
+    border: 1px solid var(--text-title);
+    border-radius: 4px;
+}
 }
 
 @media(max-width: 288px){
