--- a/style.css
+++ b/style.css
@@ -704,6 +704,16 @@ section .left .Forgetpassword form .emailPassword input{
     section .right {
         display:none;
     }
+
+
+
+section .form form .inputsenha .eye {
+    position: absolute;
+   position: absolute;
+    top: 12px;
+    left: 190px;
+    cursor: pointer;
+}
 }
 
 @media(max-width: 376px){
